--- a/styles.css
+++ b/styles.css
@@ -40,13 +40,13 @@ section {
 }
 
 button {
-    color: white;
+    color: black;
     margin: auto;
     min-width: 100px;
     max-width: 100px;
     padding: 20px 8px;
     border: 1px solid black;
-    background-color: #84a98c;
+    background-color: #FFFFFF;
     border-radius: 100px;
     margin-top: 10px;
     cursor: pointer;
