--- a/styles.css
+++ b/styles.css
@@ -45,7 +45,7 @@ button {
     max-width: 100px;
     padding: 20px 8px;
     border: 1px solid black;
-    background-color: #FFFFFF;
+    background-color: white;
     border-radius: 100px;
     margin-top: 10px;
     cursor: pointer;
